--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
