--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.8.1",
     "framer-motion": "^12.11.4",
     "next": "15.3.1",
-    "nodemailer": "^7.0.3",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
