--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "nodemailer": "^6.9.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
-    "tailwind-merge": "^3.2.0"
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
